1.精简character 2.修复setMasteries初始化错误的问题